--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="justify-content-between">
                         <a href="software.html">Sección Software</a>
                         <a href="hardware.html">Sección Hardware</a>
-                        <a href="software.html">Sección Album de fotos</a>
+                        <a href="videos.html">Sección Album de fotos</a>
                         <a href="software.html">Sección Videos</a>
                         <a href="software.html">Sección Reflexión</a>
                         <a href="software.html">Sección Referencias</a>
