--- a/software.html
+++ b/software.html
@@ -1,3 +1,112 @@
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tipos de Software</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background: #007BFF;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .container {
+            padding: 20px;
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #007BFF;
+        }
+        ul {
+            margin: 10px 0;
+            padding-left: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Tipos de Software</h1>
+    </header>
+    <div class="container">
+        <div class="section">
+            <h2>Software Propietario</h2>
+            <p>Es aquel que es desarrollado y distribuido por empresas que mantienen el control sobre su código fuente. Los usuarios deben aceptar licencias específicas que restringen la modificación, redistribución o copia del software.</p>
+            <p><strong>Ejemplos:</strong> Microsoft Windows, macOS y Microsoft Office.</p>
+            <p><strong>Características:</strong></p>
+            <ul>
+                <li>Mayor soporte técnico profesional.</li>
+                <li>Compatibilidad con sistemas y hardware comerciales.</li>
+                <li>Innovación respaldada por recursos significativos.</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Software Libre</h2>
+            <p>Se distribuye con licencias que permiten a los usuarios modificar, compartir y usar el software sin restricciones.</p>
+            <p><strong>Ejemplos:</strong> Sistema operativo Linux, GIMP, y LibreOffice.</p>
+            <p><strong>Características:</strong></p>
+            <ul>
+                <li>Transparencia y seguridad por acceso al código fuente.</li>
+                <li>Costo bajo o gratuito.</li>
+                <li>Flexibilidad para adaptarse a necesidades específicas.</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Tipos de Software</h2>
+            <h3>Sistemas Operativos</h3>
+            <p>Son la base del funcionamiento de cualquier computadora, gestionando hardware y software.</p>
+            <p><strong>Ejemplos:</strong> Windows, Linux y macOS.</p>
+            <p><strong>Características:</strong></p>
+            <ul>
+                <li>Gestión de recursos del sistema (procesador, memoria, dispositivos).</li>
+                <li>Interfaces de usuario gráficas o de línea de comandos.</li>
+                <li>Seguridad y multitarea.</li>
+            </ul>
+            <h3>Software de Programación</h3>
+            <p>Facilita la creación de nuevos programas. Incluye herramientas como editores de texto, compiladores e IDEs (Entornos de Desarrollo Integrados).</p>
+            <p><strong>Ejemplos:</strong> Visual Studio Code (editor de código) y GCC (compilador).</p>
+            <h3>Programas de Aplicación</h3>
+            <p>Diseñados para tareas específicas, como procesadores de texto, hojas de cálculo o navegadores web.</p>
+            <p><strong>Ejemplos:</strong> Microsoft Word, Excel, y Google Chrome.</p>
+        </div>
+        <div class="section">
+            <h2>Funciones Principales de Windows</h2>
+            <ul>
+                <li><strong>Gestión de archivos y almacenamiento:</strong> Proporciona herramientas como el Explorador de Archivos para organizar datos en discos locales y en la nube (OneDrive).</li>
+                <li><strong>Interfaz gráfica amigable:</strong> Ofrece accesos rápidos mediante menús y ventanas.</li>
+                <li><strong>Compatibilidad amplia:</strong> Soporta una gran variedad de aplicaciones y dispositivos de hardware.</li>
+                <li><strong>Seguridad:</strong> Incluye Windows Defender y actualizaciones frecuentes para proteger contra amenazas cibernéticas.</li>
+                <li><strong>Facilidades para redes:</strong> Simplifica la conexión a redes domésticas y empresariales.</li>
+            </ul>
+        </div>
+    </div>
+</body>
+</html>
+
+
+
+
+<!--
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -92,3 +201,5 @@
         
     </body>
 </html>
+
+-->
