--- a/hardware.html
+++ b/hardware.html
@@ -1,4 +1,128 @@
 <!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hardware y sus Características</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background: #007BFF;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        .container {
+            padding: 20px;
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #007BFF;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin: 10px 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Hardware y sus Características</h1>
+    </header>
+    <div class="container">
+        <div class="section">
+            <h2>¿Qué es el Hardware?</h2>
+            <p>El hardware comprende todos los componentes físicos de una computadora, los cuales se clasifican en función de su funcionalidad:</p>
+            <ul>
+                <li><strong>Hardware básico:</strong> Incluye los elementos esenciales para el funcionamiento de la computadora, como el procesador, memoria RAM, disco duro y tarjeta madre.</li>
+                <li><strong>Hardware complementario:</strong> Periféricos y dispositivos que amplían las capacidades del equipo, como impresoras, cámaras web o altavoces.</li>
+                <li><strong>Clasificación funcional:</strong>
+                    <ul>
+                        <li><strong>Entrada:</strong> Teclado, mouse, escáner.</li>
+                        <li><strong>Salida:</strong> Monitor, impresora, bocinas.</li>
+                        <li><strong>Procesamiento:</strong> CPU, GPU.</li>
+                        <li><strong>Almacenamiento:</strong> Discos duros (HDD o SSD), USB.</li>
+                        <li><strong>Híbridos:</strong> Pantallas táctiles, unidades de disco.</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Componentes Principales de una Computadora</h2>
+            <ul>
+                <li><strong>Tarjeta madre (Motherboard):</strong> Es el núcleo donde se conectan todos los componentes. Contiene ranuras para CPU, RAM, tarjetas de expansión y almacenamiento. Permite la comunicación entre los elementos internos del sistema.</li>
+                <li><strong>Unidad Central de Procesamiento (CPU):</strong> Conocido como el "cerebro" del sistema, realiza operaciones lógicas y de control. Sus características incluyen velocidad (GHz), cantidad de núcleos y eficiencia energética.</li>
+                <li><strong>Memoria RAM:</strong> Es volátil y almacena datos temporalmente para acelerar la ejecución de programas. Las capacidades modernas oscilan entre 8 GB y 64 GB.</li>
+                <li><strong>Memoria ROM:</strong> No volátil, contiene instrucciones básicas del sistema como el firmware. Es esencial para el arranque del equipo.</li>
+                <li><strong>Discos duros (HDD y SSD):</strong>
+                    <ul>
+                        <li><strong>HDD:</strong> Mayor capacidad por menor costo, pero más lento.</li>
+                        <li><strong>SSD:</strong> Más rápido y resistente, aunque más caro.</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Periféricos</h2>
+            <ul>
+                <li><strong>Entrada:</strong> Teclado, mouse, micrófonos.</li>
+                <li><strong>Salida:</strong> Monitor, impresoras.</li>
+                <li><strong>Entrada/Salida:</strong> Pantallas táctiles, dispositivos USB.</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Otros Componentes</h2>
+            <ul>
+                <li><strong>Tarjeta de video (GPU):</strong> Optimiza el procesamiento de gráficos y tareas intensivas.</li>
+                <li><strong>Unidades ópticas (CD/DVD/Blu-ray):</strong> Cada vez menos comunes, utilizadas para discos físicos.</li>
+                <li><strong>Gabinete:</strong> Aloja todos los componentes y facilita el flujo de aire.</li>
+            </ul>
+        </div>
+
+        <img width="200" height="200"   class="img-fluid img-thumbnail" src="https://th.bing.com/th/id/R.6537682d2e55df72aaaa278fd5f87199?rik=UY7EeGBKwBNRZg&pid=ImgRaw&r=0" alt="img">
+        <img width="200" height="200"  class="img-fluid img-thumbnail" src="https://images-na.ssl-images-amazon.com/images/I/714mr6GxecL._SL1200_.jpg" alt="img">
+
+        <img width="200" height="200"   class="img-fluid img-thumbnail" src="https://www.cyberpuerta.mx/img/product/XL/CP-GIGABYTE-GA-C1007UN-D-1.jpg" alt="img">
+        <img width="200" height="200"  class="img-fluid img-thumbnail" src="https://th.bing.com/th/id/OIP.QGmu_wR-VwKpCbquGUxaMwHaE3?rs=1&pid=ImgDetMain" alt="img">
+
+        <img width="200" height="200"   class="img-fluid img-thumbnail" src="https://th.bing.com/th/id/OIP.bvPkAuFxyumyXnCNZQojBAHaEo?rs=1&pid=ImgDetMain" alt="img">
+        <img width="200" height="200"  class="img-fluid img-thumbnail" src="https://th.bing.com/th/id/OIP.chRcJWg0EXlkdSktl2CMtQHaE7?rs=1&pid=ImgDetMain" alt="img">
+
+        <img width="200" height="200"   class="img-fluid img-thumbnail" src="https://th.bing.com/th/id/OIP.7qPLcfmrj4Z87r_3NZS93QHaE8?rs=1&pid=ImgDetMain" alt="img">
+        <img width="200" height="200"  class="img-fluid img-thumbnail" src="https://th.bing.com/th/id/R.d3e288a6d068850b71cd76ca00aa9414?rik=Q5xUqq%2bXTIqqKA&pid=ImgRaw&r=0" alt="img">
+
+        <img width="200" height="200"   class="img-fluid img-thumbnail" src="https://www.bhphotovideo.com/images/images2000x2000/SanDisk_SDCZ36_008G_B35_Cruzer_8GB_USB_2_0_752231.jpg" alt="img">
+        <img width="200" height="200"  class="img-fluid img-thumbnail" src="https://th.bing.com/th/id/OIP.kfIt9UrfzS0yDBj6GWr9MAAAAA?rs=1&pid=ImgDetMain" alt="img">
+    </div>
+</body>
+</html>
+
+
+
+
+
+
+
+<!--
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -107,3 +231,5 @@
     
 </body>
 </html>
+
+-->
