--- a/videos.html
+++ b/videos.html
@@ -3,108 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plataformas para Búsqueda de Información y Creación de Contenido</title>
+    <title>Tutoriales de Diseño y Herramientas Digitales</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f4f4f9;
             color: #333;
         }
         header {
-            background: #007BFF;
+            background-color: #2196F3;
             color: white;
-            padding: 10px 0;
+            padding: 1em 0;
             text-align: center;
         }
-        .container {
-            padding: 20px;
+        main {
+            padding: 2em;
             max-width: 800px;
             margin: auto;
             background: white;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
-        .platform {
-            margin-bottom: 20px;
+        section {
+            margin-bottom: 2em;
         }
-        h2 {
-            color: #007BFF;
+        section h2 {
+            font-size: 1.5em;
+            margin-bottom: 0.5em;
+            color: #2196F3;
         }
-        img {
-            max-width: 100%;
-            height: auto;
-            margin: 10px 0;
+        section p {
+            line-height: 1.6;
+        }
+        a {
+            color: #2196F3;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Plataformas para Búsqueda de Información y Creación de Contenido</h1>
+        <h1>Tutoriales de Diseño y Herramientas Digitales</h1>
     </header>
-    <div class="container">
-        <div class="platform">
-            <h2>1. Canva</h2>
-            <p><strong>Uso:</strong> Herramienta de diseño gráfico para crear infografías, presentaciones, y contenido visual.</p>
-            <p><strong>Características:</strong>
-                <ul>
-                    <li>Biblioteca extensa de plantillas.</li>
-                    <li>Ideal para usuarios sin experiencia en diseño.</li>
-                    <li>Funciones de colaboración en equipo.</li>
-                </ul>
-            </p>
-            <img src="canva-example.jpg" alt="Ejemplo de diseño en Canva">
-            <p><strong>Importancia:</strong> Simplifica la creación de contenido profesional, útil para marketing, educación y redes sociales.</p>
-        </div>
-        <div class="platform">
-            <h2>2. Piktochart</h2>
-            <p><strong>Uso:</strong> Diseño de infografías y visualización de datos.</p>
-            <p><strong>Características:</strong>
-                <ul>
-                    <li>Amplia gama de plantillas personalizables.</li>
-                    <li>Enfoque en la presentación de informes y datos complejos.</li>
-                </ul>
-            </p>
-            <img src="piktochart-example.jpg" alt="Ejemplo de diseño en Piktochart">
-            <p><strong>Importancia:</strong> Perfecto para profesionales en marketing y educación.</p>
-        </div>
-        <div class="platform">
-            <h2>3. Visme</h2>
-            <p><strong>Uso:</strong> Creación de presentaciones, mapas conceptuales e infografías.</p>
-            <p><strong>Características:</strong>
-                <ul>
-                    <li>Enfoque en contenido interactivo.</li>
-                    <li>Permite integrar gráficos animados y datos dinámicos.</li>
-                </ul>
-            </p>
-            <img src="visme-example.jpg" alt="Ejemplo de diseño en Visme">
-            <p><strong>Importancia:</strong> Mejora la interacción y el engagement con el contenido.</p>
-        </div>
-        <div class="platform">
-            <h2>4. Infogram</h2>
-            <p><strong>Uso:</strong> Visualización de datos interactiva.</p>
-            <p><strong>Características:</strong>
-                <ul>
-                    <li>Gráficos dinámicos y mapas interactivos.</li>
-                    <li>Ideal para informes empresariales y educativos.</li>
-                </ul>
-            </p>
-            <img src="infogram-example.jpg" alt="Ejemplo de gráficos en Infogram">
-            <p><strong>Importancia:</strong> Facilita la comprensión de datos complejos mediante visuales atractivos.</p>
-        </div>
-        <div class="platform">
-            <h2>5. MyMap.AI</h2>
-            <p><strong>Uso:</strong> Creación de mapas conceptuales asistidos por IA.</p>
-            <p><strong>Características:</strong>
-                <ul>
-                    <li>Generación automática a partir de texto o archivos.</li>
-                    <li>Personalización y exportación en múltiples formatos.</li>
-                </ul>
-            </p>
-            <img src="mymapai-example.jpg" alt="Ejemplo de mapa conceptual en MyMap.AI">
-            <p><strong>Importancia:</strong> Ahorra tiempo al estructurar ideas y mejorar la planificación.</p>
-        </div>
-    </div>
+    <main>
+        <section>
+            <h2><a href="https://www.youtube.com/watch?v=DSAjkfG-6Wk" target="_blank">Canva Tutorial Completo - Paso a Paso</a></h2>
+            <p>Este video ofrece un tutorial completo de Canva, ideal para principiantes. Enseña cómo usar esta herramienta para diseñar contenido para redes sociales, infografías, presentaciones, y más.</p>
+        </section>
+        <section>
+            <h2><a href="https://www.youtube.com/watch?v=79xl5kRlAy4" target="_blank">Tutorial Piktochart - Infografías Gratis</a></h2>
+            <p>Este video enseña cómo usar Piktochart para crear infografías de forma gratuita. Explica paso a paso cómo aprovechar sus plantillas y funciones para diseñar contenido visual.</p>
+        </section>
+        <section>
+            <h2><a href="https://www.youtube.com/watch?v=ddBTeg8iH7g" target="_blank">¿Cómo hacer presentaciones interactivas con VISME desde cero?</a></h2>
+            <p>Este video enseña cómo crear presentaciones interactivas desde cero con Visme. Ideal para quienes desean aprender a incorporar creatividad e innovación en sus presentaciones visuales.</p>
+        </section>
+        <section>
+            <h2><a href="https://www.youtube.com/watch?v=961gqW8LHiY" target="_blank">INFOGRAM, aprende fácilmente a crear infografías</a></h2>
+            <p>Este tutorial enseña cómo usar Infogram para crear infografías intuitivas y visualmente atractivas, ideal para principiantes y profesionales.</p>
+        </section>
+        <section>
+            <h2><a href="https://www.youtube.com/watch?v=4vnSAudSyjU" target="_blank">Cómo crear mapas mentales con MyMap AI</a></h2>
+            <p>Este video muestra cómo usar MyMap.AI para crear mapas mentales interactivos de forma automática. Explica las funciones básicas del software y cómo aprovechar la inteligencia artificial para estructurar ideas y proyectos fácilmente.</p>
+        </section>
+    </main>
 </body>
 </html>
