--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="hardware.html">Sección Hardware</a>
                         <a href="albumfts.html">Sección Album de fotos</a>
                         <a href="videos.html">Sección Videos</a>
-                        <a href="software.html">Sección Reflexión</a>
+                        <a href="reflexion.html">Sección Reflexión</a>
                         <a href="software.html">Sección Referencias</a>
                     </div>
                 </article>
